--- a/projectpillar/src/css/style.scss
+++ b/projectpillar/src/css/style.scss
@@ -1,479 +1,373 @@
-@import "./_reset";
-@import "./animatedbackground";
-@import "./_timeline";
-@import "./_scrolldown";
-@import "./_navbar";
+@import "./reset";
+@import "./navbar";
+@import "./animatedBackground";
+@import "./timeline";
 
 :root {
   --background-color: #f7f7f7;
+  --font-blk: #292f36;
+  --font-blk-gray: rgba(41, 47, 54, 0.6);
   --font-white: #fff;
   --font-blk: #292f36;
   --transition-nav: 300ms linear;
   --border: #dadce0 solid 1px;
-  --about-bg: #ff7a7a;
-  --timeline-bg: #fff0a7;
-  --registrtation-bg: #d3f5f9;
-  --footer-bg: #e7fae7;
-  --sponsors-bg: #f7fff7;
   --box-shadow: 1.5px 3.4px 3.6px -46px rgba(0, 0, 0, 0.01),
     4.1px 9.3px 9.9px -46px rgba(0, 0, 0, 0.026),
     9.9px 22.3px 23.8px -46px rgba(0, 0, 0, 0.049),
     33px 74px 79px -46px rgba(0, 0, 0, 0.08);
 }
 
-.section-wrapper {
-  position: relative;
+article {
+  height: 100%;
   width: 100%;
-  padding: 75px 2em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-//hero element wrapper
-
-.section-wrapper:nth-of-type(1) {
-  padding: 75px 2em;
-  // background: rgb(255, 255, 255);
-  background: linear-gradient(
-    180deg,
-    #dadada 0% rgba(241, 241, 241, 1) 75%,
-    rgba(255, 255, 255, 1) 100%
-  );
-  @media screen and (max-width: 900px) {
-  }
-}
-// timeline element wrapper
-.section-wrapper:nth-of-type(5) {
-  position: relative;
-  // background-color: #fff0a7;
-  padding: 75px 2em;
-  justify-content: space-evenly;
-  gap: 0;
-  h3 {
-    font-size: 3em;
-    font-weight: 600;
-    color: var(--font-blk);
-    margin-top: 25px;
-  }
-  @media screen and (max-width: 900px) {
-    padding: 75px 1em;
-    h3 {
-      font-size: 2em;
-    }
-  }
 }
 
-// #ccccff
-
-.wrapper-flex {
-  padding: 75px 2em;
-
-  // what is project pillar elements wrapper
-
-  &:nth-of-type(2) {
-    background-color: #eefafc;
-
-    h3 {
-      color: var(--font-blk);
-    }
-    p {
-    }
-
-    @media screen and (max-width: 900px) {
-      padding: 75px 1em;
-    }
-  }
-
-  // sponsors elements wrapper
-
-  &:nth-of-type(4) {
-    padding: 50px 2em;
-    background-color: #fff;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-    h3 {
-      font-size: 3em;
-      font-weight: 600;
-      color: var(--font-blk);
-      margin-top: 25px;
-    }
-  }
-}
-
-// timeline elements wrapper
-
-.section-wrapper:nth-of-type(3) {
-  position: relative;
-  background-color: #f8fafd;
-  padding: 75px 0em;
-  justify-content: space-between;
-
-  h3 {
-    font-size: 2.5em;
-    font-weight: 600;
-    color: var(--font-blk);
-    margin-top: -25px;
-  }
-  @media screen and (max-width: 900px) {
-    padding: 50px 15px;
-    justify-content: flex-start;
-    gap: 1em 0;
-  }
-}
-
-.section-wrapper:nth-of-type(6) {
-  background-color: #d3f5f9;
-  gap: 1.25em 0;
-  h3 {
-    font-size: 3em;
-    font-weight: 600;
-    color: var(--font-blk);
-  }
-  @media screen and (max-width: 900px) {
-    padding: 50px 0.8rem;
-  }
-}
-
-.project-pillar {
-  font-size: 4em;
-  font-weight: 600;
-  text-transform: uppercase;
+h1 {
+  font-size: 2.5rem;
+  //   text-align: center;
   color: var(--font-blk);
-  text-align: center;
 }
 
-.content-wrapper {
+section {
   width: 100%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-evenly;
-  align-items: flex-start;
-  height: 100%;
-  padding: 2.5em 5em;
-  h3 {
-    font-size: 3em;
-    font-weight: 600;
-    color: var(--font-white);
-  }
+  padding: 70px 100px;
+  position: relative;
+}
 
+section:nth-of-type(1) {
+  height: 100vh;
+  background: linear-gradient(180deg, #e7e7e7, #ffffff);
+}
+
+section:nth-of-type(2) {
+  height: 35vh;
+  background-color: #eefafc;
   p {
-    font-size: 1.25em;
-    line-height: 2;
-    text-align: left;
-  }
-  @media screen and (max-width: 900px) {
-    // gap: 1em;
-    padding: 0.5em 0;
-    h3 {
-      font-size: 2.5em;
-    }
-    p {
-      padding: 0 1em;
-      width: 100%;
-      font-size: 0.85em;
-      text-align: center;
-    }
+    margin-top: 2%;
+    font-size: 17.5px;
+    color: var(--font-blk-gray);
   }
 }
 
-// .hr {
-//   background-color: #ff4747;
-//   height: 2px;
-//   width: 25%;
-//   border-radius: 2rem;
-// }
-.container {
-  width: 100%;
-  height: 100%;
-}
-.flex-wrapper {
-  width: 100%;
-  height: 100%;
-  &:nth-of-type(1) {
-    background-color: #ccccff;
+section:nth-of-type(3) {
+  height: 50vh;
+  background-color: #f8fafd;
+  padding: 0;
+  h1 {
+    padding: 0px 100px;
+    padding-top: 65px;
   }
-  &:nth-of-type(2) {
-    background-color: #e7e7e7;
-    h3 {
-      font-size: 3em;
-      font-weight: 600;
-      color: var(--font-blk);
-    }
-    p {
-      color: var(--font-blk);
-    }
+}
+
+section:nth-of-type(4) {
+  height: 50vh;
+  background-color: #ffffff;
+}
+
+section:nth-of-type(5) {
+  height: auto;
+}
+
+.hero-img {
+  width: 500px;
+  height: 500px;
+  object-fit: contain;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.incentives-wrapper {
+  //   background-color: #bfddff;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  position: absolute;
+  padding: 0 100px;
+  margin-top: 2.5%;
+}
+
+.cards {
+  height: 200px;
+  width: 325px;
+}
+
+.card-img-cont {
+  height: 55px;
+  width: 55px;
+  object-fit: contain;
+}
+.cards-details {
+  margin-top: 15px;
+  h4 {
+    font-size: 1.2em;
+  }
+  p {
+    // margin-top: 5px;
+    color: rgba(41, 47, 54, 0.5);
+    font-size: 0.9em;
   }
 }
 
 footer {
   width: 100%;
   height: auto;
-  position: relative;
-  // background-color: #ffffff;
-}
-
-.social-media {
-  height: auto;
-  width: 250px;
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-}
-.social-media-cont {
-  cursor: pointer;
-  position: relative;
-  text-decoration: none;
-  color: #7fc0bb;
-  .bi {
-    font-size: 1.2em;
-    @media screen and (max-width: 900px) {
-    }
-  }
-}
-.email-footer {
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: row;
-  gap: 0 5em;
-  text-align: left;
-
-  @media screen and (max-width: 900px) {
-    flex-direction: column;
-    gap: 2em 0;
-  }
-}
-.email-area,
-.phone-area {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  gap: 0 0.5rem;
-  color: var(--font-blk);
-  font-weight: 500;
-}
-.contact-area {
-  color: rgb(67, 105, 113);
-  h4 {
-    font-size: 1.1em;
-  }
+  background-color: #292f36;
 }
 
 .footer-wrapper {
   width: 100%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 250px;
-  padding: 1em 2em;
-  // background: rgb(255, 255, 255);
-  background: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 1) 50%,
-    #d7d7d7 100%
-  );
-  h3 {
-    font-size: 2.7em;
-    font-weight: 600;
+  height: 27.5vh;
+  padding: 25px 100px;
+  background: linear-gradient(0deg, #cecece, #e1e1e1);
+  h1 {
     color: var(--font-blk);
-  }
-
-  p {
-    font-size: 1.1em;
-    line-height: 2;
-  }
-  h4 {
-    font-weight: 600;
-  }
-  @media screen and (max-width: 900px) {
-    gap: 1em 0;
-    padding: 1.5em 3em;
-    height: auto;
-    h3 {
-      font-size: 2em;
-    }
-    p {
-      // padding: 0 1.25em;
-      width: 100%;
-      font-size: 0.9em;
-    }
+    font-size: 2.5rem;
+    text-align: center;
   }
 }
 
 .footer-ecell {
-  color: #7fc0bb;
-  width: 100%;
-  background-color: var(--font-blk);
+  height: 7.5vh;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  align-items: center;
-  justify-content: space-evenly;
-  gap: 0.5em 0;
-  padding: 1rem 3rem;
-
-  h5 {
-    text-transform: capitalize;
-    font-weight: 500;
-    font-size: 0.8em;
-  }
-}
-
-.register-btn {
-  text-decoration: none;
-  color: #ffffff;
-  background-color: #55c9e3;
-  padding: 16px 32px;
-  border-radius: 0.7rem;
-  font-size: 1.2em;
-  cursor: pointer;
-}
-.register-btn:hover {
-  text-decoration: none;
-  color: #ffffff;
-  background-color: #55c9e3;
-  padding: 16px 32px;
-  border-radius: 0.7rem;
-  font-size: 1.2em;
-}
-
-.hero-content {
-  display: flex;
-  flex-wrap: nowrap;
-  flex-direction: column;
   justify-content: center;
-  z-index: 1;
-  height: 100%;
   align-items: center;
-  gap: 2em 0;
-}
-
-.content-area {
-  width: 75%;
-  height: 100%;
-  background-color: #fff;
-  border-radius: 0.7rem;
-  padding: 0 5rem;
-  overflow-y: hidden;
-  @media screen and (max-width: 900px) {
-    width: 100%;
-    padding: 0 1rem;
+  a {
+    color: rgb(127, 192, 187);
+    font-size: 16px;
   }
 }
 
-.registration-area {
-  width: 100%;
-  height: 100%;
-  background-color: pink;
-  overflow-y: auto;
-  margin-top: 60px;
-}
-
-.hero-img {
-  width: 450px;
-  height: 450px;
-
-  @media screen and (max-width: 900px) {
-    width: 350px;
-    height: 450px;
-  }
-}
-
-.incentives-wrapper {
-  width: 100%;
-  height: 65%;
-  // background-color: pink;
-  padding: 0 7em;
-  gap: 0 4em;
-
+.social-media {
+  width: 500px;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: flex-start;
-
-  @media screen and (max-width: 900px) {
-    gap: 1em 0;
-    padding: 0 1em;
-    flex-wrap: wrap;
-  }
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
-.cards {
-  // background-color: white;
-  border-radius: 12px;
-  // outline: 1.4px solid #dadce0;
-  width: auto;
-  height: auto;
-  gap: 1em 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-
-  @media screen and (max-width: 900px) {
-    width: 100%;
-    gap: 0.5em 0;
-  }
-}
-.incentives-img-cont {
-  height: 64px;
-  border-radius: 10px;
-  margin-top: 10px;
-
-  @media screen and (max-width: 900px) {
-    height: 32px;
-    margin-top: 0px;
-  }
-}
-
-.card-details {
-  // padding: 24px 16px;
-  margin-bottom: 25px;
-  // text-align: center;
-  h4 {
-    font-size: 1.3em;
-    color: var(--font-blk);
-    padding-bottom: 4px;
-  }
-  p {
-    color: rgba(41, 47, 54, 0.5);
-    font-size: 0.9em;
-  }
-
-  @media screen and (max-width: 750px) {
-    padding: 8px;
-  }
-}
-
-.card-details:nth-of-type(4) {
-  padding-left: -10px;
-}
-
-.sponsors-display {
-  width: 100%;
-  height: 65%;
-  // background-color: pink;
+.contact-wrapper {
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: space-evenly;
+  align-items: center;
+  margin: 2.5% 10%;
 }
 
-.sponsors-img {
-  height: 100%;
-  width: 250px;
-  // filter: grayscale(100%);
+.contact-card {
+  width: 350px;
+  height: auto;
+  h4 {
+    color: rgb(67, 105, 113);
+    font-size: 1.01em;
+  }
+}
+
+.phone-area,
+.email-area {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 0 1em;
+}
+.contact-content {
+  display: block;
+}
+
+.footer-ecell {
+  text-align: center;
+  text-transform: capitalize;
+  color: rgb(127, 192, 187);
+  padding: 10px 16px;
+  h5 {
+    font-weight: 500;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  h1 {
+    font-size: 2.1rem;
+    //   text-align: center;
+    color: var(--font-blk);
+  }
+
+  section {
+    width: 100%;
+    padding: 65px 32px;
+  }
+  section:nth-of-type(2) {
+    height: 35vh;
+    p {
+      margin-top: 5%;
+      font-size: 15px;
+    }
+  }
+  .cards {
+    width: 100%;
+  }
+
+  section:nth-of-type(3) {
+    height: 120vh;
+    h1 {
+      padding: 0px 32px;
+      padding-top: 65px;
+    }
+  }
+
+  section:nth-of-type(5) {
+    height: auto;
+  }
+
+  .incentives-wrapper {
+    //   background-color: #bfddff;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+
+    padding: 0 32px;
+  }
+
+  .hero-img {
+    height: 350px;
+    width: 350px;
+    z-index: 1;
+  }
+
+  .footer-wrapper {
+    height: 60vh;
+    padding: 25px 32px;
+    h1 {
+      color: var(--font-blk);
+      font-size: 2rem;
+    }
+  }
+  .footer-ecell {
+    height: 20vh;
+  }
+
+  .footer-wrapper {
+    text-align: center;
+  }
+
+  .contact-wrapper {
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    gap: 2em 0;
+    padding: 0 10px;
+    margin-top: 10%;
+  }
+
+  .contact-card {
+    width: 350px;
+    height: auto;
+    text-align: left;
+
+    h4 {
+      color: rgb(67, 105, 113);
+      font-size: 1.01em;
+    }
+  }
+
+  .incentives-wrapper {
+    width: 100%;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 0;
+    margin-top: 60px;
+  }
+  .card-img-cont {
+    height: 40px;
+    width: 40px;
+  }
+  .social-media {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 393px) and (max-width: 501px) {
+  .hero-img {
+    height: 275px;
+    width: 275px;
+    z-index: 1;
+  }
+  h1 {
+    font-size: 2.3rem;
+    //   text-align: center;
+    color: var(--font-blk);
+  }
+
+  .nav-header {
+    padding: 2.5px 16px;
+  }
+
+  section:nth-of-type(2) {
+    height: 60vh;
+  }
+
+  section:nth-of-type(3) {
+    height: 107.5vh;
+  }
+  //   section:nth-of-type(5) {
+  //     height: 2vh;
+  //   }
+
+  .footer-wrapper {
+    padding: 25px 16px;
+    height: 70vh;
+  }
+  .social-media {
+    width: 100%;
+  }
+  .footer-ecell {
+    height: 10vh;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 392px) {
+  .footer-wrapper {
+    padding: 25px 16px;
+    height: 75vh;
+  }
+  h1 {
+    font-size: 2.3rem;
+    //   text-align: center;
+    color: var(--font-blk);
+  }
+
+  .nav-header {
+    padding: 2.5px 16px;
+  }
+
+  section:nth-of-type(2) {
+    height: 70vh;
+  }
+
+  section:nth-of-type(3) {
+    height: 140vh;
+  }
+  .hero-img {
+    height: 250px;
+    width: 250px;
+    z-index: 1;
+  }
+  section:nth-of-type(5) {
+    height: auto;
+  }
+  .social-media {
+    width: 100%;
+  }
+  .footer-ecell {
+    height: 12.5vh;
+  }
 }
