--- a/team/css/style.css
+++ b/team/css/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .logo-ecell {
-  width: 50%;
+  width: 100%;
 }
 
 .milind {
@@ -47,9 +47,14 @@ h1 {
   color: rgba(255, 255, 255, 0.5);
   flex-direction: row;
 }
+@media(max-width:745px){
+  .flex-col {
+  flex-direction: column;
+  }
+}
 
 section {
-  height: 90vh;
+  height: 100vh;
   background-color: transparent;
 }
 
@@ -70,13 +75,13 @@ section {
 .slide-bg {
   position: fixed;
   width: 100%;
+  height:110vh;
   display: flex;
   justify-content: center;
   left: 0;
   z-index: -2;
   opacity: 0.3;
 }
-
 .slide-bg>video,
 .slide-bg>img {
   min-width: 100%;
@@ -86,7 +91,6 @@ section {
 .arrow-down {
   width: 60px;
   height: 100px;
-  margin: 0 0 0 -30px;
   position: absolute;
   left: 50%;
   bottom: 0px;
@@ -433,7 +437,7 @@ section {
       height: 450px;
   }
 }
-@media(max-width:990px){
+@media(max-width:1156px){
   .milind {
     display: flex;
         flex-direction: column;
@@ -469,7 +473,7 @@ section {
       right: 10px;
   }
 }
-@media(max-width:800px){
+@media(max-width:836px){
   .milind {
     display: flex;
         flex-direction: column;
@@ -559,7 +563,7 @@ section {
   }
 
 }
-@media(max-width:745px){
+@media(max-width:800px){
   .team-box-container{
       grid-template-columns: 250px 250px;
   }
@@ -592,7 +596,7 @@ section {
       position: static;
   }
 }
-@media(max-width:575px){
+@media(max-width:590px){
   .team-box-container{
       grid-template-columns: 1fr 1fr;
       grid-gap: 10px;
