--- a/projectpillar/src/css/_timeline.scss
+++ b/projectpillar/src/css/_timeline.scss
@@ -139,6 +139,11 @@
   border: 5px solid #fb07d9;
 }
 
+@media screen and (min-width: 751px) and (max-width: 1100px) {
+  .timeline-wrapper .icons {
+    left: 47%;
+  }
+}
 @media screen and (max-width: 750px) {
   .timeline-wrapper {
     height: 100%;
