--- a/projectpillar/src/css/style.css
+++ b/projectpillar/src/css/style.css
@@ -463,6 +463,11 @@ nav {
   border: 5px solid #fb07d9;
 }
 
+@media screen and (min-width: 751px) and (max-width: 1100px) {
+  .timeline-wrapper .icons {
+    left: 47%;
+  }
+}
 @media screen and (max-width: 750px) {
   .timeline-wrapper {
     height: 100%;
@@ -575,6 +580,7 @@ section {
 
 section:nth-of-type(1) {
   height: 100vh;
+  background-color: #fff;
   background: linear-gradient(180deg, #e7e7e7, #ffffff);
 }
 
@@ -608,8 +614,8 @@ section:nth-of-type(5) {
 }
 
 .hero-img {
-  width: 500px;
-  height: 500px;
+  width: 350px;
+  height: 350px;
   -o-object-fit: contain;
      object-fit: contain;
   position: absolute;
@@ -662,7 +668,8 @@ footer {
   width: 100%;
   height: 27.5vh;
   padding: 25px 100px;
-  background: linear-gradient(0deg, #cecece, #e1e1e1);
+  background: rgb(255, 255, 255);
+  background: linear-gradient(180deg, rgb(255, 255, 255) 25%, rgb(226, 226, 226) 100%);
 }
 .footer-wrapper h1 {
   color: var(--font-blk);
@@ -726,7 +733,7 @@ footer {
   text-align: center;
   text-transform: capitalize;
   color: rgb(127, 192, 187);
-  padding: 10px 16px;
+  padding: 20px 16px;
 }
 .footer-ecell h5 {
   font-weight: 500;
@@ -749,6 +756,7 @@ footer {
   section:nth-of-type(2) p {
     margin-top: 5%;
     font-size: 15px;
+    text-align: justify;
   }
 
   .cards {
@@ -835,7 +843,7 @@ footer {
     width: 100%;
   }
 }
-@media screen and (min-width: 393px) and (max-width: 501px) {
+@media screen and (min-width: 395px) and (max-width: 501px) {
   .hero-img {
     height: 275px;
     width: 275px;
@@ -852,7 +860,7 @@ footer {
   }
 
   section:nth-of-type(2) {
-    height: 60vh;
+    height: 55vh;
   }
 
   section:nth-of-type(3) {
@@ -861,7 +869,7 @@ footer {
 
   .footer-wrapper {
     padding: 25px 16px;
-    height: 70vh;
+    height: 57.5vh;
   }
 
   .social-media {
