--- a/projectpillar/src/css/style.scss
+++ b/projectpillar/src/css/style.scss
@@ -36,6 +36,7 @@ section {
 
 section:nth-of-type(1) {
   height: 100vh;
+  background-color: #fff;
   background: linear-gradient(180deg, #e7e7e7, #ffffff);
 }
 
@@ -69,8 +70,8 @@ section:nth-of-type(5) {
 }
 
 .hero-img {
-  width: 500px;
-  height: 500px;
+  width: 350px;
+  height: 350px;
   object-fit: contain;
   position: absolute;
   top: 50%;
@@ -122,7 +123,12 @@ footer {
   width: 100%;
   height: 27.5vh;
   padding: 25px 100px;
-  background: linear-gradient(0deg, #cecece, #e1e1e1);
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 25%,
+    rgba(226, 226, 226, 1) 100%
+  );
   h1 {
     color: var(--font-blk);
     font-size: 2.5rem;
@@ -185,7 +191,7 @@ footer {
   text-align: center;
   text-transform: capitalize;
   color: rgb(127, 192, 187);
-  padding: 10px 16px;
+  padding: 20px 16px;
   h5 {
     font-weight: 500;
   }
@@ -207,6 +213,7 @@ footer {
     p {
       margin-top: 5%;
       font-size: 15px;
+      text-align: justify;
     }
   }
   .cards {
@@ -294,7 +301,7 @@ footer {
   }
 }
 
-@media screen and (min-width: 393px) and (max-width: 501px) {
+@media screen and (min-width: 395px) and (max-width: 501px) {
   .hero-img {
     height: 275px;
     width: 275px;
@@ -311,7 +318,7 @@ footer {
   }
 
   section:nth-of-type(2) {
-    height: 60vh;
+    height: 55vh;
   }
 
   section:nth-of-type(3) {
@@ -323,7 +330,7 @@ footer {
 
   .footer-wrapper {
     padding: 25px 16px;
-    height: 70vh;
+    height: 57.5vh;
   }
   .social-media {
     width: 100%;
