--- a/projectpillar/src/css/style.css
+++ b/projectpillar/src/css/style.css
@@ -434,7 +434,7 @@ nav {
   height: 50px;
   background-color: rgb(255, 255, 255);
   position: absolute;
-  left: 48.5%;
+  left: calc(50% - 20px);
   top: 10px;
   border-radius: 50%;
   display: flex;
@@ -463,11 +463,6 @@ nav {
   border: 5px solid #fb07d9;
 }
 
-@media screen and (min-width: 751px) and (max-width: 1100px) {
-  .timeline-wrapper .icons {
-    left: 47%;
-  }
-}
 @media screen and (max-width: 750px) {
   .timeline-wrapper {
     height: 100%;
@@ -585,7 +580,7 @@ section:nth-of-type(1) {
 }
 
 section:nth-of-type(2) {
-  height: 35vh;
+  height: calc(50vh - 10%);
   background-color: #eefafc;
 }
 section:nth-of-type(2) p {
@@ -595,7 +590,7 @@ section:nth-of-type(2) p {
 }
 
 section:nth-of-type(3) {
-  height: 50vh;
+  height: auto;
   background-color: #f8fafd;
   padding: 0;
 }
@@ -626,13 +621,15 @@ section:nth-of-type(5) {
 }
 
 .incentives-wrapper {
+  height: auto;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  position: absolute;
   padding: 0 100px;
   margin-top: 2.5%;
+  gap: 0 1.5em;
+  padding-bottom: 70px;
 }
 
 .cards {
@@ -666,7 +663,7 @@ footer {
 
 .footer-wrapper {
   width: 100%;
-  height: 27.5vh;
+  height: calc(45vh - 10%);
   padding: 25px 100px;
   background: rgb(255, 255, 255);
   background: linear-gradient(180deg, rgb(255, 255, 255) 25%, rgb(226, 226, 226) 100%);
@@ -678,7 +675,7 @@ footer {
 }
 
 .footer-ecell {
-  height: 7.5vh;
+  height: calc(10vh - 4%);
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -703,9 +700,10 @@ footer {
 .contact-wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  margin: 2.5% 10%;
+  margin-top: 2.25%;
+  margin-left: 7.5%;
 }
 
 .contact-card {
@@ -750,9 +748,6 @@ footer {
     padding: 65px 32px;
   }
 
-  section:nth-of-type(2) {
-    height: 35vh;
-  }
   section:nth-of-type(2) p {
     margin-top: 5%;
     font-size: 15px;
@@ -764,7 +759,7 @@ footer {
   }
 
   section:nth-of-type(3) {
-    height: 120vh;
+    height: calc(100vh + 20%);
   }
   section:nth-of-type(3) h1 {
     padding: 0px 32px;
@@ -778,7 +773,7 @@ footer {
   .incentives-wrapper {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: baseline;
     padding: 0 32px;
   }
@@ -790,7 +785,7 @@ footer {
   }
 
   .footer-wrapper {
-    height: 60vh;
+    height: calc(60vh - 10%);
     padding: 25px 32px;
   }
   .footer-wrapper h1 {
@@ -799,7 +794,7 @@ footer {
   }
 
   .footer-ecell {
-    height: 20vh;
+    height: calc(10vh - 2.5%);
   }
 
   .footer-wrapper {
@@ -808,12 +803,14 @@ footer {
 
   .contact-wrapper {
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     align-items: flex-start;
     gap: 2em 0;
     padding: 0 10px;
-    margin-top: 10%;
+    margin: 0;
+    margin-top: 2.5%;
+    margin-left: 5%;
   }
 
   .contact-card {
@@ -860,16 +857,16 @@ footer {
   }
 
   section:nth-of-type(2) {
-    height: 55vh;
+    height: calc(55vh + 10%);
   }
 
   section:nth-of-type(3) {
-    height: 107.5vh;
+    height: calc(105vh + 12.5%);
   }
 
   .footer-wrapper {
     padding: 25px 16px;
-    height: 57.5vh;
+    height: calc(55vh + 10%);
   }
 
   .social-media {
@@ -877,16 +874,11 @@ footer {
   }
 
   .footer-ecell {
-    height: 10vh;
+    height: calc(12vh - 10%);
     width: 100%;
   }
 }
 @media screen and (max-width: 392px) {
-  .footer-wrapper {
-    padding: 25px 16px;
-    height: 75vh;
-  }
-
   h1 {
     font-size: 2.3rem;
     color: var(--font-blk);
@@ -897,11 +889,11 @@ footer {
   }
 
   section:nth-of-type(2) {
-    height: 70vh;
+    height: calc(70vh + 7.5%);
   }
 
   section:nth-of-type(3) {
-    height: 140vh;
+    height: calc(120vh + 7.5%);
   }
 
   .hero-img {
@@ -918,7 +910,16 @@ footer {
     width: 100%;
   }
 
+  footer {
+    height: auto;
+  }
+
+  .footer-wrapper {
+    padding: 25px 16px;
+    height: auto;
+  }
+
   .footer-ecell {
-    height: 12.5vh;
+    height: 20vh;
   }
 }/*# sourceMappingURL=style.css.map */
