--- a/projectpillar/src/css/style.scss
+++ b/projectpillar/src/css/style.scss
@@ -41,7 +41,7 @@ section:nth-of-type(1) {
 }
 
 section:nth-of-type(2) {
-  height: 35vh;
+  height: calc(50vh - 10%);
   background-color: #eefafc;
   p {
     margin-top: 2%;
@@ -51,7 +51,7 @@ section:nth-of-type(2) {
 }
 
 section:nth-of-type(3) {
-  height: 50vh;
+  height: auto;
   background-color: #f8fafd;
   padding: 0;
   h1 {
@@ -82,13 +82,15 @@ section:nth-of-type(5) {
 
 .incentives-wrapper {
   //   background-color: #bfddff;
+  height: auto;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  position: absolute;
   padding: 0 100px;
   margin-top: 2.5%;
+  gap: 0 1.5em;
+  padding-bottom: 70px;
 }
 
 .cards {
@@ -121,7 +123,7 @@ footer {
 
 .footer-wrapper {
   width: 100%;
-  height: 27.5vh;
+  height: calc(45vh - 10%);
   padding: 25px 100px;
   background: rgb(255, 255, 255);
   background: linear-gradient(
@@ -137,7 +139,7 @@ footer {
 }
 
 .footer-ecell {
-  height: 7.5vh;
+  height: calc(10vh - 4%);
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -162,9 +164,11 @@ footer {
 .contact-wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  margin: 2.5% 10%;
+  // margin: 2.5% 7.5%;
+  margin-top: 2.25%;
+  margin-left: 7.5%;
 }
 
 .contact-card {
@@ -209,7 +213,6 @@ footer {
     padding: 65px 32px;
   }
   section:nth-of-type(2) {
-    height: 35vh;
     p {
       margin-top: 5%;
       font-size: 15px;
@@ -221,7 +224,7 @@ footer {
   }
 
   section:nth-of-type(3) {
-    height: 120vh;
+    height: calc(100vh + 20%);
     h1 {
       padding: 0px 32px;
       padding-top: 65px;
@@ -236,7 +239,7 @@ footer {
     //   background-color: #bfddff;
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: baseline;
 
     padding: 0 32px;
@@ -249,7 +252,7 @@ footer {
   }
 
   .footer-wrapper {
-    height: 60vh;
+    height: calc(60vh - 10%);
     padding: 25px 32px;
     h1 {
       color: var(--font-blk);
@@ -257,7 +260,7 @@ footer {
     }
   }
   .footer-ecell {
-    height: 20vh;
+    height: calc(10vh - 2.5%);
   }
 
   .footer-wrapper {
@@ -266,12 +269,14 @@ footer {
 
   .contact-wrapper {
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     align-items: flex-start;
     gap: 2em 0;
     padding: 0 10px;
-    margin-top: 10%;
+    margin: 0;
+    margin-top: 2.5%;
+    margin-left: 5%;
   }
 
   .contact-card {
@@ -318,11 +323,11 @@ footer {
   }
 
   section:nth-of-type(2) {
-    height: 55vh;
+    height: calc(55vh + 10%);
   }
 
   section:nth-of-type(3) {
-    height: 107.5vh;
+    height: calc(105vh + 12.5%);
   }
   //   section:nth-of-type(5) {
   //     height: 2vh;
@@ -330,22 +335,18 @@ footer {
 
   .footer-wrapper {
     padding: 25px 16px;
-    height: 57.5vh;
+    height: calc(55vh + 10%);
   }
   .social-media {
     width: 100%;
   }
   .footer-ecell {
-    height: 10vh;
+    height: calc(12vh - 10%);
     width: 100%;
   }
 }
 
 @media screen and (max-width: 392px) {
-  .footer-wrapper {
-    padding: 25px 16px;
-    height: 75vh;
-  }
   h1 {
     font-size: 2.3rem;
     //   text-align: center;
@@ -357,11 +358,11 @@ footer {
   }
 
   section:nth-of-type(2) {
-    height: 70vh;
+    height: calc(70vh + 7.5%);
   }
 
   section:nth-of-type(3) {
-    height: 140vh;
+    height: calc(120vh + 7.5%);
   }
   .hero-img {
     height: 250px;
@@ -374,7 +375,17 @@ footer {
   .social-media {
     width: 100%;
   }
+
+  footer {
+    height: auto;
+  }
+
+  .footer-wrapper {
+    padding: 25px 16px;
+    height: auto;
+  }
+
   .footer-ecell {
-    height: 12.5vh;
+    height: calc(22vh- 10%);
   }
 }
