--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -294,8 +294,8 @@ footer {
   padding: 1em 2em;
   // background: rgb(255, 255, 255);
   background: linear-gradient(180deg,
-      rgba(255, 255, 255, 1) 50%,
-      #d7d7d7 100%);
+      #c4e4e1 50%,
+      #c4e4e1 100%);
 
   h3 {
     font-size: 2.5em;
@@ -448,7 +448,7 @@ footer {
 }
 
 .aims-img-cont {
-  height: 64px;
+  height: 95px;
   border-radius: 10px;
   margin-top: 10px;
   position: relative;
