--- a/src/css/style.css
+++ b/src/css/style.css
@@ -713,14 +713,13 @@ footer {
 }
 
 .aims-img-cont {
-  height: 95px;
+  width: 95px;
   border-radius: 10px;
   margin-top: 10px;
   position: relative;
 }
 @media screen and (max-width: 900px) {
   .aims-img-cont {
-    height: 32px;
     margin-top: 0px;
   }
 }
