home page and event page updated
made what is E-Cell centered
and added visit website links in event page

--- a/events/css/style.css
+++ b/events/css/style.css
@@ -148,6 +148,9 @@ body {
   padding: 1.5rem;
   background: #fff;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   z-index: 1;
 }
 .blog-card .description h1,
