--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -148,11 +148,11 @@
 .content-wrapper {
   width: 100%;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: space-evenly;
-  align-items: flex-start;
+  // display: flex;
+  // flex-direction: column;
+  // flex-wrap: nowrap;
+  // justify-content: space-evenly;
+  // align-items: flex-start;
   height: 100%;
 
   h3 {
@@ -164,7 +164,7 @@
   p {
     font-size: 1.25em;
     line-height: 2;
-    text-align: left;
+    text-align: center;
   }
 
   @media screen and (max-width: 900px) {
